--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 			   Сохранив изменения в Notepad, просто нажмите
 			    кнопку Reload ('перезагрузить') в Netscape,
 				 чтобы увидеть эти изменения реализованными 
-				 в HTML-документе. 
+				 в HTML-документе.
+					Сергей. 
           </P> 
      </body> 
 </html>
