--- a/index.html
+++ b/index.html
@@ -1,24 +1,8 @@
 <html>
     <head>
-          <titled> > 
-               Пример 1 
-          </title>
-     </head> 
-     <body> 
-          <H1> 
-               Привет! 
-          </H1> 
-          <P> 
-               Это простейший пример HTML-документа. 
-          </P> 
-          <P> 
-               Этот *.html-файл может быть 
-			   одновременно открыт и в Notepad, и в Netscape. 
-			   Сохранив изменения в Notepad, просто нажмите
-			    кнопку Reload ('перезагрузить') в Netscape,
-				 чтобы увидеть эти изменения реализованными 
-				 в HTML-документе.
-					Сергей. 
-          </P> 
-     </body> 
+        <title>Welcome to Example.com!</title>
+    </head>
+    <body>
+        <h1>Success!  The example.com server block is working!</h1>
+    </body>
 </html>
